--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,6 @@
     <color name="green">#B8E986</color>
     <color name="yellow">#F5A623</color>
     <color name="dark_blue">#338FFC</color>
+    <color name="dark_green">#429321</color>
+    <color name="light_green">#B4EC51</color>
 </resources>
